--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <canvas id="canvas"></canvas>
   <script type="text/javascript" src="./js/Developer.js"></script>
   <script type="text/javascript" src="./js/Background.js"></script>
-  <script type="text/javascript" src="./js/Enemys.js"></script>
+  <script type="text/javascript" src="./js/Enemies.js"></script>
   <script type="text/javascript" src="./js/app.js"></script>
   <script type="text/javascript" src="./js/index.js"></script>
 </body>
