--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
 
   <canvas id="canvas"></canvas>
-  <script type="text/javascript" src="./js/Developer.js"></script>
   <script type="text/javascript" src="./js/Background.js"></script>
+  <script type="text/javascript" src="./js/Bullets.js"></script>
+  <script type="text/javascript" src="./js/Developer.js"></script>
   <script type="text/javascript" src="./js/Enemies.js"></script>
   <script type="text/javascript" src="./js/app.js"></script>
   <script type="text/javascript" src="./js/index.js"></script>
