--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>Dev Invades</title>
 </head>
 
+
 <body>
+  <audio src="./Sounds/InitMusic.mp3" preload="auto" autoplay="true" loop="loop"></audio>
   <canvas id="canvas"></canvas>
   <script type="text/javascript" src="./js/Background.js"></script>
   <script type="text/javascript" src="./js/Bullets.js"></script>
